--- a/app/src/main/res/layout/content_setting_activity.xml
+++ b/app/src/main/res/layout/content_setting_activity.xml
@@ -181,7 +181,7 @@
                     android:drawablePadding="@dimen/_10sdp"
                     android:gravity="center_vertical"
                     android:padding="@dimen/_12sdp"
-                    android:text="@string/wallet" />
+                    android:text="@string/transactions" />
 
                 <ImageView
                     android:layout_width="wrap_content"
