--- a/app/src/main/res/layout/content_setting_activity.xml
+++ b/app/src/main/res/layout/content_setting_activity.xml
@@ -46,7 +46,6 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="14dp"
                     android:layout_toEndOf="@+id/imv_profile_img"
-                    android:text="Steve Smith"
                     android:theme="@style/ProductTitleTextStyle" />
 
                 <android.support.v7.widget.AppCompatTextView
@@ -269,11 +268,13 @@
 
 
             <View
+
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
+                android:id="@+id/ll_changepass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -303,7 +304,6 @@
                     android:rotation="@integer/locale_mirror_flip"
                     android:src="@mipmap/arrow" />
             </LinearLayout>
-
 
             <View
                 android:id="@+id/changePwView"
